multithreading first commit at DeadLock